# snowglobe

./: .gitignore  Dockerfile  README.md  api.py  docker_setup.sh  download.sh  llms.yaml  pyproject.toml  scenario.py  scripts.py  snowglobe.py  start_sim.sh  start_sim_openai.sh  user_defined.compose.yaml  user_defined_sim.compose.yaml
config/: WoTRM.yaml  game.yaml  llms.yaml
config/local/: llms.yaml  wotr_unmasked.yaml
config/openai/: wotr_unmasked-openai.yaml
examples/: ac.py  ac_game.py  ac_sim.py  haiwire.py  startup.sh  user_defined_game.py
examples/haiwire_files/: incidents.csv  injects.csv
snowglobe/: __init__.py  scripts.py  snowglobe.py
snowglobe/terminal/: index.html  js.js
src/llm_snowglobe/: __init__.py  api.py  chat.py  interface.py  scripts.py  snowglobe.py  ui.py  user_defined_game.py  user_defined_sim.py
src/llm_snowglobe/chat/: chat.py
src/llm_snowglobe/core/: __init__.py  configuration.py  control.py  database.py  history.py  intelligent.py  llm.py  player.py  stateful.py  team.py
src/llm_snowglobe/terminal/: js.js
src/llm_snowglobe/tools/: __init__.py  ask.py  rag.py
terminal/: index.html  js.js  style.css
