[tool.poetry]
name = "snowglobe"
version = "0.1.0"
description = "Snow Globe multi-agent system for open-ended wargames with large language models"
license = "Apache-2.0"
authors = ["Daniel Hogan <6313241+dphogan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
torch = {version = "*", source = "torch"}
torchvision = {version = "*", source = "torch"}
transformers = "*"
einops = "*"
accelerate = "*"
tqdm = "*"
pyyaml = "*"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
platformdirs = "*"
langchain = "*"
openai = "*"
langchain-openai = "*"
langchain-huggingface = "*"
langchain-chroma = "*"
langchain-community = "*"
langchain-text-splitters = "*"
llama-cpp-python = "0.2.79"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu122"
secondary = true

[tool.poetry.scripts]
snowglobe_config = "snowglobe:scripts.config"
snowglobe_server = "snowglobe:scripts.server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
